# Analyzing-financial-data-with-python-and-rust

./: .gitignore  README.md
agentic_design/: constraints.txt  pyproject.toml
agentic_design/building-llm-agent-teams/Notebooks/: ch02_LLM_Agents_Implementation.ipynb  ch02a_Autogen_Agents.ipynb  ch02b_AI_Agents_Two_Comedians.ipynb  ch03_Autogen_Sequential_Chats_Coding.ipynb  ch03b_LLM_Agents_Can_Code.ipynb  ch04a_Stock_App_Result_Example.ipynb  ch07_Building_Streamlit_App.ipynb
agentic_design/building-llm-agent-teams/code_execution/: ch03d_llm_agent_group_chat.py
agentic_design/deeplearning_ai/agent_memoy/: README.md
agentic_design/mastering-autogen/: README.md
agentic_design/mastering-autogen/Notebooks/: ch02_human_input_mode.ipynb  ch05_our_first_autogen_agent.ipynb  ch05b_assistant_proxy_agent.ipynb  ch05c_simple_code_executor.ipynb  ch08_autogen_simple_tool.ipynb  ch08b_autogen_travel_tools.ipynb  ch08c_autogen_travel_planner.ipynb  ch09_autogen_conversation_patterns.ipynb  ch09b_sequential_chat_pattern.ipynb  ch09c_group_chat_pattern.ipynb  ch09d_group_chat_sequential.ipynb  ch09e_nested_chats.ipynb  ch10_use_case_customer_support.ipynb  ch10b_use_case_financial_report.ipynb  ch10c_use_case_research_paper_analysis.ipynb
agentic_design/travel-agent-tutorial/: README.md
agentic_design/travel-agent-tutorial/Notebooks/: 01_autogen_flights_tutorial.ipynb  01_flights_tutorial_basic_settings.ipynb
algorithmic_trading/: pyproject.toml
algorithmic_trading/algorithmic-trading-hilpisch/: README.md
algorithmic_trading/algorithmic-trading-hilpisch/quants_bootcamp_2024_11/: README.md
algorithmic_trading/crypto-algo-trading-hagmann/: README.md
algorithmic_trading/ml-applied-to-trading-mcdonogh/: README.md
algorithmic_trading/ml-applied-to-trading-mcdonogh/Notebooks/: 01_prerequisites.ipynb  02_backtesting_introduction.ipynb  03_feature_engineering.ipynb  Untitled.ipynb
algorithmic_trading/probabilistic-machine-learning-for-finance/: README.md
algorithmic_trading/probabilistic-machine-learning-for-finance/Notebooks/: ch01_Errors_in_Model_Parameter_Estimates.ipynb
algorithmic_trading/probability-statistics-sajjad-mustafa/: README.md
algorithmic_trading/probability-statistics-sajjad-mustafa/Notebooks/: 02_Experiment_Outcome_and_Sample_Space.ipynb  03_Probability_Model_and_Probability_Law.ipynb  Practicing_Subsets_in_Python.ipynb
algorithmic_trading/python-for-finance-hagmann/: README.md
algorithmic_trading/python-for-finance-hagmann/Notebooks/: ch27001_correlation_and_regression_part_01  ch27001_correlation_and_regression_part_01.ipynb  ch27002_correlation_and_regression_part_02.ipynb  ch27003_confidence_interval_and_statistical_significance.ipynb  ch27004_simple_linear_regression_model.ipynb  (+10 more)
algorithmic_trading/reinforcement-learning-finance-hilpisch/: ch01_learning_through_interaction.ipynb
algorithmic_trading/statistical-arbitrage-mcdonogh/: README.md
deep_reinforcement_learning/: pyproject.toml
deep_reinforcement_learning/pytorch-tutorial/: 01_Neural_Network_Concepts.ipynb  01a_PyTorch_According_to_Claude_LLM.ipynb  02_Activation_Functions.ipynb  03_Building_a_Neural_Network_Walktrough.ipynb  README.md
deep_reinforcement_learning/reinforcement-learning-book/: README.md
dive_into_deep_learning/: README.md  pyproject.toml
dive_into_deep_learning/Notebooks/: ch0201_data_manipulation.ipynb  ch0202_data_preprocessing.ipynb  ch0203_linear_algebra.ipynb  ch0206_probability_and_statistics.ipynb  ch0301_linear_regression.ipynb
dive_into_deep_learning/deep_understanding_of_dl/: README.md
llm_engineering/: pyproject.toml
llm_engineering/advanced_rag/: README.md  ch02_robust_llm_systems.ipynb
llm_engineering/chatgpt-pairs-trading/: README.md
llm_engineering/master-ai-and-llms/: README.md
probabilistic-machine-learning/: pyproject.toml
py-algorithmic-forex-trading/: README.md  pyproject.toml
py-algorithmic-forex-trading/Notebooks/: 01-Fetching-Data-from-Oanda-API-Endpoints.ipynb  02-Saving-Multiple-Instruments.ipynb
py-algorithmic-trading-hilpisch/: pyproject.toml
py-building-llm-agents-teams/: pyproject.toml
py-building-llm-agents-teams/Notebooks/: ch02_LLM_Agents_Implementation.ipynb  connecting_openai_api.ipynb
py-python-data-analysis/: pyproject.toml
py-python-data-analysis/Notebooks/: 01-Basic-Data-Structures.ipynb  02-NumPy-Basics.ipynb  0201-NumPy-Ecercises.ipynb  03-Pandas-Basics.ipynb  0401-Pandas-Series-and-Data-Frame-Objects.ipynb  0402-Pandas-Hierarchical-Indexing.ipynb  0403-Pandas-Missing-Data.ipynb  0404-Pandas-GroupBy.ipynb  0405-Pandas-Merging-Joining-Concatenating.ipynb  0406-Pandas-Operations.ipynb  0407-Pandas-Data-Input-and-Output.ipynb  0408-Pandas-Exercises.ipynb  05-Matplotlib-Basics.ipynb  Fiona-Shapely-Examples.ipynb
py-reinforcement-learning-algo-trading/: pyproject.toml
py-reinforcement-learning-algo-trading/Notebooks/: ch03_data_analysis_and_technical_signals.ipynb  ch03a_creating_technical_indicators.ipynb  ch04_prompt_engineering_techniques.ipynb  ch05_understanding_reinforcement_learning.ipynb  ch06_project_01_mountain_car_challenge.ipynb
py-statistics-and-probability/: README.md  pyproject.toml
py-statistics-and-probability/Notebooks/: ch01_descriptive_statistics.ipynb  ch02_descriptive_statistics.ipynb  ch03_compute_risk_return_correlation_asset.ipynb  ch04_combinatorial_statistics.ipynb  ch06_probability.ipynb  ch07_probability_exercise.ipynb  ch08_law_of_probability.ipynb  ch14_python_for_data_science.ipynb  ch14a_python_for_data_science_numpy.ipynb
py-triangular-arbitrage/: README.md  pyproject.toml
py-triangular-arbitrage/Notebooks/: binance_examples.ipynb  poloniex_examples.ipynb
py-triangular-arbitrage/py_triangular_arbitrage/: func_arbitrage.py  main.py
python-for-finance/: README.md  pyproject.toml
python-for-ml-and-trading/: README.md  pyproject.toml
reinforcement-learning/reinforcement-learning-py3-12/: pyproject.toml
reinforcement_learning/reinforcement-learning-py3-12/: pyproject.toml
rust-for-finance/rust-data-analysis/: Cargo.toml
(+263 files in other folders)
