[tool.poetry]
name = "agentic-design"
version = "0.1.0"
description = ""
authors = ["mindeleven <mindeleven@posteo.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
autogen = "^0.3.1"
pandas = "^2.2.3"
jupyter = "^1.1.1"
ipykernel = "^6.29.5"
openai = "^1.52.0"
matplotlib = "^3.9.2"
yfinance = "^0.2.46"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
