[tool.poetry]
name = "deep-reinforcement-learning"
version = "0.1.0"
description = ""
authors = ["mindeleven <mindeleven@posteo.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.1.1"
ipykernel = "^6.29.5"
pandas = "^2.2.3"
numpy = "^2.1.2"
matplotlib = "^3.9.2"
gymnasium = "^1.0.0"
pygame = "^2.6.1"
scikit-learn = "^1.5.2"
torch = "^2.5.1"
torchvision = "^0.20.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
