[tool.poetry]
name = "llm-engineering"
version = "0.1.0"
description = ""
authors = ["mindeleven <mindeleven@posteo.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.1.1"
pandas = "^2.2.3"
openai = "^1.52.0"
requests = "^2.32.3"
bs4 = "^0.0.2"
anthropic = "^0.37.1"
google = "^3.0.0"
google-api-python-client = "^2.149.0"
google-generativeai = "^0.8.3"
gradio = "^5.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
