[tool.poetry]
name = "py-algorithmic-trading-hilpisch"
version = "0.1.0"
description = ""
authors = ["mindeleven <mindeleven@posteo.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.1"
pandas = "^2.2.2"
matplotlib = "^3.9.2"
quandl = "^3.7.0"
tables = "^3.10.1"
jupyter = "^1.1.1"
seaborn = "^0.13.2"
urllib3 = "^2.2.3"
nasdaq-data-link = "^1.0.4"
tstables = {git = "https://github.com/yhilpisch/tstables.git"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
