[tool.poetry]
name = "py-python-data-analysis"
version = "0.1.0"
description = ""
authors = ["mindeleven <mindeleven@posteo.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.1.1"
numpy = "^2.1.1"
pandas = "^2.2.2"
xlrd = "^2.0.1"
openpyxl = "^3.1.5"
lxml = "^5.3.0"
selenium = "^4.24.0"
bs4 = "^0.0.2"
sqlalchemy = "^2.0.35"
matplotlib = "^3.9.2"
fiona = "^1.10.1"
shapely = "^2.0.6"
scipy = "^1.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
