[tool.poetry]
name = "py-reinforcement-learning-algo-trading"
version = "0.1.0"
description = ""
authors = ["mindeleven <mindeleven@posteo.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.1.1"
numpy = "^2.1.1"
pandas = "^2.2.2"
seaborn = "^0.13.2"
matplotlib = "^3.9.2"
gymnasium = {extras = ["box2d"], version = "^0.29.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
