[tool.poetry]
name = "python-notebooks"
version = "0.1.0"
description = ""
authors = ["mindeleven <mindeleven@posteo.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.0.0"
notebook = "^7.2.1"
pandas = "^2.2.2"
seaborn = "^0.13.2"
matplotlib = "^3.9.2"
numpy = "^2.1.0"
pybit = "^5.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
